--- a/onlinestore/docker-compose.yml
+++ b/onlinestore/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   mysqldb:
     image: "mysql:8.0"
-    container_name: mysqldb
+    container_name: mysqldb-etiqa
     restart: always
     ports:
       - "${MYSQL_PORT_MAP}:3306"
@@ -22,7 +22,7 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       
   api_service:
-    container_name: onlinestore
+    container_name: onlinestore-etiqa
     build: .
     restart: always
     ports:
@@ -30,7 +30,7 @@ services:
     networks:
       - local_network
     environment:
-      - spring.datasource.url=jdbc:mysql://mysqldb:3306/${MYSQL_DATABASE}?allowPublicKeyRetrieval=true&useSSL=false
+      - spring.datasource.url=jdbc:mysql://mysqldb-etiqa:3306/${MYSQL_DATABASE}?allowPublicKeyRetrieval=true&useSSL=false
     depends_on:
       - mysqldb
     volumes:
