--- a/onlinestore/src/main/resources/application.properties
+++ b/onlinestore/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=onlinestore
 
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://mysqldb:3306/onlinestore?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysqldb-etiqa:3306/onlinestore?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=test
 spring.datasource.password=test
 
